--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,6 @@ ul{
     list-style-type: none;
     display: flex;
     gap: 15px;
-
 }
 
 a{
@@ -79,7 +78,7 @@ a{
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 900;
-    margin: 5px 0;
+    margin: 0 0;
 }
 
 .mainText{
@@ -105,4 +104,71 @@ a{
     background-color: var(--mainColor);
     border-radius: 5px;
     border: 0;
+}
+.twoScreen{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 50px 0;
+    margin-bottom: 100px;
+}
+
+.twoScreenHeading{
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    display: flex;
+    justify-content:center ;
+    margin-bottom: 50px;
+}
+
+.twoScreenImage{
+    object-fit:cover;
+    width: 180px;
+    height: 180px;
+    border-radius: 20px;
+    border: 4px var(--mainColor) solid;
+    margin-bottom: 10px;
+}
+
+.blockInformationeTwo{
+    display: flex;
+    flex-direction:row;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.elementsText{
+    width: 180px;
+}
+
+.threeScreenCitata{
+    display: flex;
+    flex-direction:column;
+}
+
+.threeScreenCitataMain{
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.threeScreenCitataAutor{
+    font-size: 24px;
+    color: #1F2937 ;
+    font-weight: 900;
+    text-align: end;
+}
+
+.threeScreen{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 100px;
+    background-color: #E5E7EB;
 }
