--- a/style/style.css
+++ b/style/style.css
@@ -169,6 +169,58 @@ a{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 100px;
+    padding: 100px 0;
     background-color: #E5E7EB;
+}
+
+
+.fourScreen{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 70px 0;
+}
+
+.fourScreenBlock{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #3882F6;
+    padding: 70px;
+    border-radius: 10px;
+
+}
+
+.fourScreenBlockText{
+    display: flex;
+    flex-direction:column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-left: 70px;
+}
+
+.fourScreenBlockTextTitle{
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.fourScreenBlockTextMain{
+    font-size: 18px;
+    color:#E5E7EB ;
+    font-weight: lighter;
+}
+
+.fourScreenBlockTextButton{
+    font-size: 16px;
+    font-weight:600;
+    color: #F9FAF8;
+    padding: 6px 30px;
+    background-color: var(--mainColor);
+    border-radius: 5px;
+    border: 4px white solid;
+    margin-right: 70px;
 }
